Fixed footer text alignment

--- a/scss/user/_footer.scss
+++ b/scss/user/_footer.scss
@@ -1,4 +1,9 @@
 #footer {
+
+    .tagline {
+
+    }
+    
     .menu  {
         .title,
         .nav {
